--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integracao Contínua parte 1</li>
+        <li>Integracao Contínua: Maturidade e Produtividade no Desemvolvimento de Software</li>
     </ul>>
 </body>
 </head>
